--- a/app/src/main/res/layout/fragment_toolbar.xml
+++ b/app/src/main/res/layout/fragment_toolbar.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             app:collapsedTitleTextAppearance="@style/Collapsed"
             app:expandedTitleMarginBottom="16dp"
+            app:expandedTitleMarginStart="16dp"
             app:expandedTitleTextAppearance="@style/Expanded"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
